# skema

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_availability_slots.py  0003_remove_registrar.py  0003_remove_registrar_fix_booking.py  0004_drop_legacy_schedule_tables.py  0005_drop_reschedule.py  0006_remove_registrar_user.py
backend/app/: constants.py  db.py  deps.py  main.py  models.py  openapi.py  security.py  seed.py  settings.py  startup.py  validation_errors.py  validators.py
backend/app/routers/: appointments.py  auth.py  doctors.py  notifications.py  patients.py  schedule.py  users.py
backend/app/schemas/: appointment.py  auth.py  common.py  notification.py  patient.py  schedule.py
backend/app/services/: appointments.py  notifications.py  schedule.py  user_utils.py
backend/app/utils/: formatting.py
backend/clinic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_appointments.py  test_fuzz.py  test_roles.py  test_schemathesis.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  constants.ts  main.tsx  styles.css
frontend/src/components/appointments/: AppointmentsPanel.tsx
frontend/src/components/auth/: AuthScreen.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/notifications/: NotificationsPanel.tsx
frontend/src/components/profile/: ProfilePanel.tsx
frontend/src/components/schedule/: SchedulePanel.tsx
frontend/src/components/ui/: RoleBadge.tsx  (+2 more)
frontend/src/utils/: datetime.ts  pickerOptions.ts  roles.ts  validation.ts
(+1 files in other folders)
