[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-backend"
version = "0.1.0"
description = "Backend for online patient appointment management service"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "email-validator>=2.0",
  "eval-type-backport>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "schemathesis>=3.25",
  "hypothesis>=6.100",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
